--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         {
             display: none;
         }
+        h2
+        {
+            margin-top:25px;
+        }
     </style>
      <script src="tic-tac-toe.js" async></script>
 </head>
